--- a/src/app/life-length/life-length.component.scss
+++ b/src/app/life-length/life-length.component.scss
@@ -1,8 +1,53 @@
+@import '../../styles/vars';
+
 .intervals {
+  margin-top: 1.5em;
   display: flex;
   flex-wrap: wrap;
 }
 
+.sub-title {
+  max-width: 90%;
+  text-align: center;
+  font-size: 1.5em;
+  margin: 0 auto;
+  line-height: 1.9em;
+
+  p {
+    margin: 0.5em;
+
+    &:first-child {
+      margin-top: 1em;
+    }
+  }
+}
+
+.life-length {
+  text-align: center;
+  text-align-last: center;
+  color: $mainText;
+  border: none;
+  display: inline;
+  box-sizing: border-box;
+  font-size: 1.1em;
+  line-height: 1.1em;
+  max-width: 2.2em;
+  border-bottom: 2px solid $gray;
+  padding-left: .37em;
+
+  &.year {
+    max-width: 4.2em;
+  }
+}
+
 select {
-  text-transform: capitalize;
+  cursor: pointer;
+  border: none;
+  border-radius: 0;
+  background: none;
+  appearance: none;
+  border-bottom: 2px solid $gray;
+  line-height: 1.3em;
+  text-align: center;
+  text-align-last: center;
 }
